@@ -1,1 +1,1 @@
-DIST kodi-14.0.tar.gz 70811373 SHA256 11746d95cc59361f36ce6ea9d0d36bbd9ec3376e991f5ec1720f8ff740b91192 SHA512 74faa65615f84329827c2fdbc9218636d0245ef451bd9995a9ddb3242794b49b0fd61d028d2f5adf0d6f816ef7225295eb8d7203e61ee5c59cfeccfa87360e07 WHIRLPOOL 160667f66c59a45c13a1f3ca97cc6b12f926b2cfb94f97f247df479c563847cd65d37a3fd3361b15bb809df0041e3ea6b6ada56728b4ff37227dc0acc247aea3
+DIST kodi-14.1.tar.gz 70832109 SHA256 a38059e292cf8523918834e49fcc2d688525ceb7951ddf7f5ee535f4147255d6 SHA512 05dccad279073fc804faf2f179ba370f612d53c823dd333fdd151e05de37eb8202cc981ba48afff695d475bafde9c8f05f562fe09883593a70299a2f098a9849 WHIRLPOOL 464ff2673c9e65466dff73d3c91b8754ee68d64b4a18ebb0b0c6e8efa2da1cc32ab22686530a8469a105bf7a089d8928db64c5c61d272462c13485006875b506
